--- a/package.json
+++ b/package.json
@@ -1,5 +1,66 @@
 {
+  "_args": [
+    [
+      {
+        "raw": "hexo-generator-apidoc@git+https://github.com/zendapi/hexo-generator-apidoc.git",
+        "scope": null,
+        "escapedName": "hexo-generator-apidoc",
+        "name": "hexo-generator-apidoc",
+        "rawSpec": "git+https://github.com/zendapi/hexo-generator-apidoc.git",
+        "spec": "git+https://github.com/zendapi/hexo-generator-apidoc.git",
+        "type": "hosted",
+        "hosted": {
+          "type": "github",
+          "ssh": "git@github.com:zendapi/hexo-generator-apidoc.git",
+          "sshUrl": "git+ssh://git@github.com/zendapi/hexo-generator-apidoc.git",
+          "httpsUrl": "git+https://github.com/zendapi/hexo-generator-apidoc.git",
+          "gitUrl": "git://github.com/zendapi/hexo-generator-apidoc.git",
+          "shortcut": "github:zendapi/hexo-generator-apidoc",
+          "directUrl": "https://raw.githubusercontent.com/zendapi/hexo-generator-apidoc/master/package.json"
+        }
+      },
+      "/Volumes/softboy/projects/nodejs/zendapi_site_devel"
+    ]
+  ],
+  "_from": "git+https://github.com/zendapi/hexo-generator-apidoc.git",
+  "_id": "hexo-generator-apidoc@0.0.1",
+  "_inCache": true,
+  "_location": "/hexo-generator-apidoc",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "hexo-generator-apidoc@git+https://github.com/zendapi/hexo-generator-apidoc.git",
+    "scope": null,
+    "escapedName": "hexo-generator-apidoc",
+    "name": "hexo-generator-apidoc",
+    "rawSpec": "git+https://github.com/zendapi/hexo-generator-apidoc.git",
+    "spec": "git+https://github.com/zendapi/hexo-generator-apidoc.git",
+    "type": "hosted",
+    "hosted": {
+      "type": "github",
+      "ssh": "git@github.com:zendapi/hexo-generator-apidoc.git",
+      "sshUrl": "git+ssh://git@github.com/zendapi/hexo-generator-apidoc.git",
+      "httpsUrl": "git+https://github.com/zendapi/hexo-generator-apidoc.git",
+      "gitUrl": "git://github.com/zendapi/hexo-generator-apidoc.git",
+      "shortcut": "github:zendapi/hexo-generator-apidoc",
+      "directUrl": "https://raw.githubusercontent.com/zendapi/hexo-generator-apidoc/master/package.json"
+    }
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "git+https://github.com/zendapi/hexo-generator-apidoc.git#5dc58315521955fd8c0318bedb9665df23a5b48a",
+  "_shasum": "3ade927f572157067a5175cd509977f42ded6149",
+  "_shrinkwrap": null,
+  "_spec": "hexo-generator-apidoc@git+https://github.com/zendapi/hexo-generator-apidoc.git",
+  "_where": "/Volumes/softboy/projects/nodejs/zendapi_site_devel",
+  "dependencies": {},
+  "description": "### 实现思路 使用doxygen对c++项目进行扫描生成整个项目的xml文件，然后我们这个项目对这些xml进行分析并且使用ejs模板引擎生成最终的网站，跟hexo静态博客 进行完美的整合",
+  "devDependencies": {},
+  "gitHead": "5dc58315521955fd8c0318bedb9665df23a5b48a",
+  "main": "index",
   "name": "hexo-generator-apidoc",
-  "version": "0.0.1",
-  "main": "index"
+  "optionalDependencies": {},
+  "readme": "## zendapi项目的C++接口文档生成器\n\n### 实现思路\n使用doxygen对c++项目进行扫描生成整个项目的xml文件，然后我们这个项目对这些xml进行分析并且使用ejs模板引擎生成最终的网站，跟hexo静态博客\n进行完美的整合",
+  "readmeFilename": "README.md",
+  "version": "0.0.1"
 }
